Fix for bug 377728 - delayed accessible events problem, r=aaronlev